syntax = "proto3";

import "google/protobuf/timestamp.proto";

package battle;

service Battle {
    rpc PrepareBattle (PrepareBattleRequest) returns (BattleResponse);
	rpc StartBattle (BattleRequest) returns (StartBattleResponse);
	rpc CompleteBattle (BattleRequest) returns (BattleResponse);
	rpc AddBattleEvent (AddBattleEventRequest) returns (AddBattleEventResponse);
    rpc GetCurrentBattles (GetCurrentBattlesRequest) returns (GetCurrentBattlesResponse);
    rpc GetBattleState (GetBattleStateRequest) returns (GetBattleStateResponse);
}

message PrepareBattleRequest {
	string userId = 1;
	string mapId = 2;
}

message BattleRequest {
	string battleId = 1;
	string userId = 2;
}

message BattleResponse {
	string id = 1;
    google.protobuf.Timestamp startDate = 2;
    string userId = 3;
    string battleInfo = 4;
    google.protobuf.Timestamp endDate = 5;
    Map map = 6;
    repeated BattleState battleStates = 7;
    repeated Dictionary enemiesKilled = 8;
}

message Map {
    string id = 1;
    string name = 2;
    string difficulty = 3;
    repeated Enemies enemies = 4;
}

message Enemies {
    EnemyAssign enemy = 1;
    int32 quantity = 2;
}

message EnemyAssign {
    string id = 1;
    string name = 2;
    int32 attack = 3;
    int32 health = 4;
    int32 healLvl = 5;
    DecimalValue experience = 6;
    string difficulty = 7;
    string category = 8;
    repeated SkillEnemyAssign skills = 9;
}

message SkillEnemyAssign {
    string id = 1;
    string name = 2;
    int32 attack = 3;
    DecimalValue probability = 4;
}

message BattleState {
    string id = 1;
    string battleId = 2;
    string battleStatus = 3;
    Player player = 4;
    google.protobuf.Timestamp created = 5;
    google.protobuf.Timestamp modified = 6;
}

message Player {
    string id = 1;
    string name = 2;
    HeroAssign hero = 3;
    int32 level = 4;
    DecimalValue currentExp = 5;
    DecimalValue requiredExp = 6;
    string userId = 7;
}

message HeroAssign {
    string id = 1;
    string heroName = 2;
    int32 health = 3;
    int32 attack = 4;
    int32 healLvl = 5;
    repeated SkillHeroAssign skills = 6;
}

message SkillHeroAssign {
    string id = 1;
    string name = 2;
    int32 attack = 3;
}

message AddBattleEventRequest {
    string battleId = 1;
    string playerId = 2;
    string enemyId = 3;
    string action = 4;
}

message AddBattleEventResponse {
    string id = 1;
    string battleId = 2;
    FightAction action = 3;
    google.protobuf.Timestamp created = 4;
    int32 level = 5;
    DecimalValue currentExp = 6;
    DecimalValue requiredExp = 7;
}

message FightAction {
    string characterId = 1;
    string character = 2;
    string name = 3;
    int32 damageDealt = 4;
    int32 health = 5;
    string attackInfo = 6;

}

// Example: 12345.6789 -> { units = 12345, nanos = 678900000 }
message DecimalValue {

  // Whole units part of the amount
  int64 units = 1;

  // Nano units of the amount (10^-9)
  // Must be same sign as units
  sfixed32 nanos = 2;
}

message Pair {
   string key = 1;
   int32 value = 2;
}

message Dictionary {
   repeated Pair pairs = 1;
}

message StartBattleResponse {
    string battleId = 1;
    string playerId = 2;
    int32 playerHealth = 3;
    string enemyId = 4;
    int32 enemyHealth = 5;
}

message GetCurrentBattlesRequest {
    string userId = 1;
}

message GetCurrentBattlesResponse {
    repeated BattleDto battles = 1;
}

message BattleDto {
    string id = 1;
    google.protobuf.Timestamp StartDate = 2;
    string userId = 3;
    string BattleInfo = 4;
    google.protobuf.Timestamp EndDate = 5;
}

message GetBattleStateRequest {
    string battleId = 1;
}

message GetBattleStateResponse {
    string Id = 1;
    string BattleId = 2;
    string BattleStatus = 3;
    Player Player = 4;
    google.protobuf.Timestamp Created = 5;
    google.protobuf.Timestamp Modified = 6;
}
